@@ -355,6 +355,7 @@
 #define ATTR_copy_on_rerun             "copy_on_rerun"
 #define ATTR_job_exclusive_on_use      "job_exclusive_on_use"
 #define ATTR_disable_automatic_requeue "disable_automatic_requeue"
+#define ATTR_exitcodecanceledjob       "exit_code_canceled_job"
 
 /* notification email formating */
 #define ATTR_mailsubjectfmt "mail_subject_fmt"
