@@ -186,3 +186,4 @@ ATTR_pass_cpu_clock,
 ATTR_copy_on_rerun,
 ATTR_job_exclusive_on_use,
 ATTR_disable_automatic_requeue,
+ATTR_exitcodecanceledjob,
